--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
